Change Categories with no Features to show all the Subcategories of a such Categories.

--- a/scripts/dfte.css
+++ b/scripts/dfte.css
@@ -31,7 +31,7 @@ option.mainOption { font-weight : bold; }
 	/*background-color:grey;*/
 	/*border:1px solid grey;*/
 	position: relative;
-	top:-110.6%; 
+	top:-100.6%;
 	left:32%;
 	overflow: scroll;
 	vertical-align: top;
@@ -79,14 +79,14 @@ ul li {
 	line-height: 16px;
 }
 #container {
-	width:150px;
+	width:350px;
 	height:250px;
 	background-color:whitesmoke;
 	border:0px;
 	display:block;
 }
 #box {
-	width:150px;
+	width:350px;
 	height:220px;
 	/*background-color:gold;*/
 	/*background-color:#DAB5A4;*/
@@ -167,7 +167,7 @@ td>a:focus { color: #C11B17; text-decoration: underline; } */
 .dftTextRadio { font-family: Verdana, Arial, Helvetica, sans-serif; font-size: x-small; font-style: normal; font-weight: bold; color: #000000 }
 .dftButtons { font-family: Verdana, Arial, Helvetica, sans-serif; font-size: small; font-style: normal; font-weight: bold; color: #000000 }
 .dftTextGrassettoBig { font-family: Verdana, Arial, Helvetica, sans-serif; font-size: small; font-style: normal; font-weight: bold; color: #000000 }
-.dftTextItalic { font-family: Verdana, Arial, Helvetica, sans-serif; font-size: x-small; font-style: italic; font-weight: normal; color:#000000;}
+.dftTextItalic { font-family: Verdana, Arial, Helvetica, sans-serif; font-size: x-small; font-style: italic; font-weight: normal; color: #000000 }
 .dftTextItalicRidotto { font-family: Verdana, Arial, Helvetica, sans-serif; font-size: xx-small; font-style: italic; font-weight: normal; color: #000000 }
 .dftTextLink { font-family: Verdana, Arial, Helvetica, sans-serif; font-size: x-small; font-style: normal; font-weight: bold; color: #000066; text-decoration: underline}
 .dftEnfasi1 {  font-family: Verdana, Arial, Helvetica, sans-serif; font-weight: bold; font-size: x-small; color: #FF9900}
@@ -186,5 +186,3 @@ td>a:focus { color: #C11B17; text-decoration: underline; } */
 .dftTextCellaScura { font-family: Verdana, Arial, Helvetica, sans-serif; font-size: x-small; font-style: normal; font-weight: bold; color: #000000; background-color:#999999}
 .tocs {  font-family: Verdana, Arial, Helvetica, sans-serif; font-weight: bold; font-size: x-small; color: #990000}
 .dftMoodOn {  font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 0px; font-style: normal; font-weight: bold; color: #000000; line-height: normal; white-space: normal; border-top-width: 0px; border-right-width: 0px; border-bottom-width: 0px; border-left-width: 0px}
-
-
